# github-contributions-counter

./: .gitignore  .replit  README.md  Yunbin-Chang-Monthly.JSON  Yunbin-Chang.JSON  api.py  cache.py  contributions.py  parse.php  pyproject.toml  test.py
back-end/: contributions.py
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.js  BarChart.js  Home.css  Home.js  Navigation.js  Result.js  index.js
front-end/src/Charts/: Month.js  Ratio.js  Week.js
sample-json/: Yunbin-Chang-Monthly.JSON  Yunbin-Chang-Weekly.JSON  techbless.daily.json  techbless.monthly.json  techbless.ratio.json  techbless.weekly.json
src/: contributions.py  test.py
