[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Yunbin Chang <yunbin@hansung.ac.kr>"]
description = ""
name = "github-contributions-api"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
